preflight/impl/tests/ui/fail-wrong-impl.stderr
error: expected a trait implementation of `Avionics`
  --> $DIR/fail-wrong-impl.rs:17:6
   |
17 | impl Cool for Controller {}
   |      ^^^^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-wrong-impl.rs:3:40
  |
3 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: `#[panic_handler]` function required, but not found

error: language item required, but not found: `eh_personality`
